--- a/package/jar_dependencies/config.yaml
+++ b/package/jar_dependencies/config.yaml
@@ -2,7 +2,7 @@
 
 model:
   # model path must be provided
-  path: model
+  path: /home/jason/Documents/workspace/tianchi_ai_flow/package/python_codes/model
   # mode, default is recommended, if error is raised, set single
   mode:
   # the inputs of the tensorflow model, separated by ","
